--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <nav>
+        <ul>
+            <li>About</li>
+            <li>Work</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+    <section id="welcome-section">
+        <h1>About</h1>
+    </section>
+    <section>Work</section>
+    <section>Contact</section>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
