--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous"
+/>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <ul class="nav-list">
             <li><a href="#welcome-section">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -15,7 +21,7 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>About</h1>
+        <h1>Hey I'm Jake</h1>
 </section>
     <section id="projects" class="projects-section"><h1>Projects</h1>
         <h2>These are some of my projects</h2>
@@ -48,13 +54,32 @@
     <img src="https://picsum.photos/800/900"/>
 </section>
 
-    <section id="contact"><h1>Contact</h1>
+    <section id="contact" class="contact-section"><h1>Contact</h1>
     <div class="contact-links">
         <a href="https://facebook.com/freecodecamp"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-facebook-square"></i> Facebook</a
+      >
+        <a id="profile-link" 
+        href="https://github.com/jakeacarter"
+        target="_blank"
+        class="btn contact-details">
+    <i class="fab fa-github">GitHub</i>
+    </a>
+    <a
+    href="https://twitter.com/jakeacarter"
+    target="_blank"
+    class="btn contact-details"
+    ><i class="fab fa-twitter"></i> Twitter</a
+  >
+    <a href="mailto:jakeacarter20@gmail.com" class="btn contact-details"
+    ><i class="fas fa-at"></i> Send a email</a
+  >
+  <a href="tel:8018675309" class="btn contact-details"
+      ><i class="fas fa-mobile-alt"></i> Call me</a
     >
+
     </div>
 </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
