--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <section id="welcome-section">
         <h1>Hey I'm Jake</h1>
 </section>
-    <section id="projects" class="projects-section"><h1>Projects</h1>
-        <h2>These are some of my projects</h2>
+    <section id="projects" class="projects-section">
+        <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
             <a href="#" target="_blank" class="project project-tile">
                 <img class="project-image" src="https://picsum.photos/300/300"/>
@@ -53,7 +53,10 @@
         </div>
 </section>
 
-    <section id="contact" class="contact-section"><h1>Contact</h1>
+<section id="contact" class="contact-section">
+    <div class="contact-section-header">
+        <h2>Contact</h2>
+    </div>
     <div class="contact-links">
         <a href="https://facebook.com/freecodecamp"
       target="_blank"
