Added my website to projects section

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
-            <a href="#" target="_blank" class="project project-tile">
+            <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
                 <img class="project-image" src="https://picsum.photos/300/300"/>
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Tribute Page
+                    My Website
                     <span class="code">&#47;&gt;</span>
                   </p>
             </a>
