--- a/index.html
+++ b/index.html
@@ -22,32 +22,27 @@
     </nav>
     <section id="welcome-section">
         <h1>Hey I'm Jake</h1>
+        <h4>I'm a web developer</h2>
 </section>
     <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
             <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://picsum.photos/300/300"/>
+                <img class="project-image" src="/personal-portfolio/Images/MyWebsite300.png"/>
                 <p class="project-title">
-                    <span class="code">&lt;</span>
                     My Website
-                    <span class="code">&#47;&gt;</span>
+                  </p>
+            </a>
+            <a href="#" target="_blank" class="project project-tile">
+                <img class="project-image" src="/personal-portfolio/Images/MyPortfolio300.png"/>
+                <p class="project-title">
+                    Portfolio Page
                   </p>
             </a>
             <a href="#" target="_blank" class="project project-tile">
                 <img class="project-image" src="https://picsum.photos/300/300"/>
                 <p class="project-title">
-                    <span class="code">&lt;</span>
                     Tribute Page
-                    <span class="code">&#47;&gt;</span>
-                  </p>
-            </a>
-            <a href="#" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://picsum.photos/300/300"/>
-                <p class="project-title">
-                    <span class="code">&lt;</span>
-                    Tribute Page
-                    <span class="code">&#47;&gt;</span>
                   </p>
             </a>
         </div>
