--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </p>
             </a>
             <a href="#" target="_blank" class="project project-tile">
-                <img class="project-image" src="/personal-portfolio/Images/MyPortfolio300.png"/>
+                <img class="project-image" src="/personal-portfolio/Images/MyPortfolio.png" width="305" height="210"/>
                 <p class="project-title">
                     Portfolio Page
                   </p>
@@ -70,7 +70,7 @@
     class="btn contact-details"
     ><i class="fab fa-twitter"></i> Twitter</a
   >
-    <a href="mailto:jakeacarter20@gmail.com" class="btn contact-details"
+    <a href="mailto:email.email.com" class="btn contact-details"
     ><i class="fas fa-at"></i> Send a email</a
   >
   <a href="tel:8018675309" class="btn contact-details"
