--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h4>I'm a web developer</h2>
 </section>
     <section id="projects" class="projects-section">
-        <h2 class="projects-section-header">These are some of my projects</h2>
+        <h2 class="projects-section-header">These are a few of my projects</h2>
         <div class="projects-grid">
             <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
                 <img class="project-image" src="/personal-portfolio/Images/MyWebsite300.png"/>
