--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     Technology Interests 
                   </p>
             </a>
-            <a href="#" target="_blank" class="project project-tile">
-                <img class="project-image" src="https://picsum.photos/300/300"/>
+            <a href="/star-wars-api/index.html" target="_self" class="project project-tile">
+                <img class="project-image" src="/Images/StarWars.jpg" width="300" height="210"/>
                 <p class="project-title">
-                    Tribute Page
+                    Star Wars API Practice
                   </p>
             </a>
         </div>
@@ -79,7 +79,6 @@
     >
 
     </div>
-</section>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+</section> 
 </body>
 </html>
