--- a/star-wars.api/index.html
+++ b/star-wars.api/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="styles.css" rel="stylesheet">
     <title>Star Wars API Practice</title>
 </head>
 <body>
-    <h1 class = "main_title"> Star Wars API Practice</h1>
+    <header>
+        <h1 class = "main_title"> Star Wars API Practice</h1>
+    </header>
+    <main>
+
+
+    </main>
+    
     <script src="main.js" type="module"></script>
 </body>
 </html>
