added characters page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Technology Interests 
                   </p>
             </a>
-            <a href="/star-wars-api/index.html" target="_self" class="project project-tile">
+            <a href="/star-wars-films/index.html" target="_self" class="project project-tile">
                 <img class="project-image" src="/Images/StarWars.jpg" width="300" height="210"/>
                 <p class="project-title">
                     Star Wars API Practice
