Added starships page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
             <a href="/star-wars-films/index.html" target="_self" class="project project-tile">
                 <img class="project-image" src="/Images/StarWars.jpg" width="300" height="210"/>
                 <p class="project-title">
-                    Star Wars API Practice
+                    Star Wars Films
+                  </p>
+            </a>
+            <a href="/star-wars-characters/index.html" target="_self" class="project project-tile">
+                <img class="project-image" src="/Images/StarWars.jpg" width="300" height="210"/>
+                <p class="project-title">
+                    Star Wars Characters
                   </p>
             </a>
         </div>
