Added images on portfolio page project section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   </p>
             </a>
             <a href="/star-wars-characters/index.html" target="_self" class="project project-tile">
-                <img class="project-image" src="/Images/StarWars.jpg" width="300" height="210"/>
+                <img class="project-image" src="/Images/People.jpg" width="300" height="210"/>
                 <p class="project-title">
                     Star Wars Characters
                   </p>
