Added starship page link

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                     Star Wars Characters
                   </p>
             </a>
+            <a href="/starships/index.html" target="_self" class="project project-tile">
+                <img class="project-image" src="/Images/Ships.jpg" width="300" height="210"/>
+                <p class="project-title">
+                    Star Wars Starships
+                  </p>
+            </a>
         </div>
 </section>
 
