Fixed technology interest page link

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     My Website
                   </p>
             </a>
-            <a href="#" target="_blank" class="project project-tile">
-                <img class="project-image" src="/personal-portfolio/Images/MyPortfolio.png" width="305" height="210"/>
+            <a href="/Images/MyPortfolio.jpg" target="_self" class="project project-tile">
+                <img class="project-image" src="/Images/MyPortfolio.jpg" width="305" height="210"/>
                 <p class="project-title">
                     Technology Interests 
                   </p>
