Added footers and body color backgrounds

--- a/star-wars-films/index.html
+++ b/star-wars-films/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles.css" rel="stylesheet">
-    <title>Star Wars API Practice</title>
+    <title class="title">Star Wars API Practice</title>
 </head>
 <body>
     <header>
-        <h1 class = "main_title"> Star Wars API Practice</h1>
+        <h1 class = "main_title"> Star Wars Films</h1>
     </header>
     <main>
 
@@ -17,5 +17,8 @@
     </main>
     
     <script src="main.js" type="module"></script>
+    <footer>
+        <p>&copy; Jake Carter Designs 2020</p>
+    </footer>
 </body>
 </html>
