--- a/star-wars-characters/index.html
+++ b/star-wars-characters/index.html
@@ -6,8 +6,14 @@
     <title>Star Wars Characters</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
-<body>
+<body class="body">
+    <header class="header">
+        <h1>Star Wars Characters</h1>
+    </header>
     <main id="main"></main>
     <script src="main.js" type="module"></script>
+    <footer>
+        <p>&copy; Jake Carter Designs 2020</p>
+    </footer>
 </body>
 </html>
