Made my welcome page legit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio Page</title>
     <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -21,8 +21,11 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Hey I'm Jake</h1>
-        <h4>I'm a web developer</h2>
+        <div class="container">
+            <h1 class="heading">Hey I'm Jake Carter!</h1>
+          </div>
+       <!-- <h1>Hey I'm Jake</h1>
+        <h4>I'm a web developer</h2>-->
 </section>
     <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
@@ -62,7 +65,7 @@
 
 <section id="contact" class="contact-section">
     <div class="contact-section-header">
-        <h2>Contact</h2>
+        <h3 class="contact">Contact</h3>
     </div>
     <div class="contact-links">
         <a href="https://facebook.com/freecodecamp"
@@ -88,8 +91,10 @@
   <a href="tel:8018675309" class="btn contact-details"
       ><i class="fas fa-mobile-alt"></i> Call me</a
     >
-
     </div>
 </section> 
+<footer class="footer">
+    <p>Jake Carter Designs 2020</p>
+</footer>
 </body>
 </html>
