added star background. prettied up all pages

--- a/star-wars-films/index.html
+++ b/star-wars-films/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1 class = "main_title"> Star Wars Films</h1>
+        <img class="logo" src="../Images/Logo.png">
+        <!--<h1 class = "main_title"> Star Wars Films</h1>-->
     </header>
     <main>
 
