Added some style and added link to pokemon page on portfolio

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
                     Star Wars Starships
                   </p>
             </a>
+            <a href="/pokemon/index.html" target="_self" class="project project-tile">
+                <img class="project-image" src="/Images/CoolPokemon.jpg" width="300" height="210"/>
+                <p class="project-title">
+                    Pokemon Cards
+                  </p>
+            </a>
         </div>
 </section>
 
