--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Gotta Catch 'em All!</h1>
+        <img class="logo" src="../Images/PokemonLogo.jpg">
+        <h1></h1>
     </header>
+    <h1>Gotta Catch 'em All</h1>
     <main>
         <div class="pokemonGrid">
 
