--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -12,6 +12,10 @@
         <h1></h1>
     </header>
     <h1>Gotta Catch 'em All</h1>
+    <header> 
+        <button id="newPokemon">Create New Pokemon</button>
+    </header>
+   
     <main>
         <div class="pokemonGrid">
 
