--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -11,7 +11,7 @@
         <img class="logo" src="../Images/PokemonLogo.jpg">
         <h1></h1>
     </header>
-    <h1>Gotta Catch 'em All</h1>
+    <h1>Gotta Catch 'em All!</h1>
     <header> 
         <button id="newPokemon">Create New Pokemon</button>
     </header>
