adding type to the back of cards

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -22,7 +22,7 @@
         </div>
     </main>
     <footer>
-
+        <p>&copy; Jake Carter Designs 2020</p>
     </footer>
     <script src='pokecode.js' type="module"></script>
 </body>
