--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -60,7 +60,7 @@
           </div>
         </section>
         <footer>
-          <p>&copy; For Educational Purposes Only by Jake Carter</p>
+          <p>&copy; Jake Carter Designs 2020</p>
         </footer>
       </main>
     
