changed font and style

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 </section> 
 <footer class="footer">
-    <p>Jake Carter Designs 2020</p>
+    <p>&copy; Jake Carter Designs 2020</p>
 </footer>
 </body>
 </html>
