Changed background on card face

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../Images/PokemonLogo.jpg">
+        <img class="logo" src="../Images/PokemonLogo.png">
         <h1></h1>
     </header>
     <h1>Gotta Catch 'em All!</h1>
