added more style to cards and new header logo

--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../Images/PokemonLogo.png">
+        <img class="logo" src="../Images/OtherLogo.png">
         <h1></h1>
     </header>
-    <h1>Gotta Catch 'em All!</h1>
-    <header> 
+    <header>
+        <img class="pokeBall" src="../Images/PokeBall.png"> 
         <button id="newPokemon">Create New Pokemon</button>
+        <img class="pokeBall" src="../Images/PokeBall.png"> 
     </header>
    
     <main>
