--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <div class="container">
             <h1 class="heading">Hey I'm Jake Carter!</h1>
           </div>
+          <svg class="arrow">
+            <path class="a1" d="M0 0 L30 22 L60 0"></path>
+            <path class="a2" d="M0 20 L30 42 L60 20"></path>
+            <path class="a3" d="M0 40 L30 62 L60 40"></path>
+        </svg>
        <!-- <h1>Hey I'm Jake</h1>
         <h4>I'm a web developer</h2>-->
 </section>
