--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
-            <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
+           <!-- <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
                 <img class="project-image" src="/personal-portfolio/Images/MyWebsite300.png"/>
                 <p class="project-title">
                     My Website
-                  </p>
+                  </p>-->
             </a>
             <a href="/Images/MyPortfolio.jpg" target="_self" class="project project-tile">
                 <img class="project-image" src="/Images/MyPortfolio.jpg" width="305" height="210"/>
