--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
     <section id="projects" class="projects-section">
         <h2 class="projects-section-header">These are some of my projects</h2>
         <div class="projects-grid">
-           <!-- <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
-                <img class="project-image" src="/personal-portfolio/Images/MyWebsite300.png"/>
-                <p class="project-title">
-                    My Website
-                  </p>-->
-            </a>
+            
             <a href="/Images/MyPortfolio.jpg" target="_self" class="project project-tile">
                 <img class="project-image" src="/Images/MyPortfolio.jpg" width="305" height="210"/>
                 <p class="project-title">
                     Technology Interests 
+                  </p>
+            </a>
+            <a href="https://jakeacarter20.medium.com/" target="_blank" class="project project-tile">
+                <img class="project-image" src="/Images/MediumLogo.png" width="300" height="210"/>
+                <p class="project-title">
+                    Medium Articles
                   </p>
             </a>
             <a href="/star-wars-films/index.html" target="_self" class="project project-tile">
@@ -69,6 +70,12 @@
                 <img class="project-image" src="/Images/CoolPokemon.jpg" width="300" height="210"/>
                 <p class="project-title">
                     Pokemon Cards
+                  </p>
+            </a>
+            <a href="/Images/MyResume.png" target="_blank" class="project project-tile">
+                <img class="project-image" src="/Images/ResumeLogo.png" width="300" height="210"/>
+                <p class="project-title">
+                    My Resume
                   </p>
             </a>
         </div>
