Updated resume and wix page

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                     Pokemon Cards
                   </p>
             </a>
-            <a href="https://jakeacarter20.wixsite.com/jake" target="_self" class="project project-tile">
+            <a href="https://jakeacarter20.wixsite.com/jake" target="_blank" class="project project-tile">
                 <img class="project-image" src="/Images/MySite.jpg" width="300" height="210"/>
                 <p class="project-title">
                     My Website
                   </p>
             </a>
-            <a href="/Images/TheResume.png" target="_blank" class="project project-tile">
+            <a href="/Images/Resume.png" target="_blank" class="project project-tile">
                 <img class="project-image" src="/Images/ResumeLogo.png" width="300" height="210"/>
                 <p class="project-title">
                     My Resume
